--- a/databases/p5-DBIx-Class/Makefile
+++ b/databases/p5-DBIx-Class/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.54 2024/11/16 12:03:25 wiz Exp $
+# $NetBSD: Makefile,v 1.55 2025/02/06 00:36:38 wen Exp $
 
-DISTNAME=	DBIx-Class-0.082843
+DISTNAME=	DBIx-Class-0.082844
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBIx/}
 
