--- a/databases/p5-Rose-DB-Object/Makefile
+++ b/databases/p5-Rose-DB-Object/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.35 2024/11/16 12:03:31 wiz Exp $
+# $NetBSD: Makefile,v 1.36 2025/02/06 00:45:09 wen Exp $
 
-DISTNAME=	Rose-DB-Object-0.820
+DISTNAME=	Rose-DB-Object-0.822
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Rose/}
 
