--- a/security/oqs-provider/Makefile
+++ b/security/oqs-provider/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.7 2025/02/05 07:14:18 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2025/02/06 06:58:31 wiz Exp $
 
 VERSION=	0.8.0
 DISTNAME=	oqs-provider-${VERSION}
-DIST_SUBDIR=	${PKGNAME}
+DIST_SUBDIR=	${PKGNAME_NOREV}
 PKGREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	${MASTER_SITE_GITHUB:=open-quantum-safe/}
