--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1841 2025/02/05 12:53:45 wen Exp $
+# $NetBSD: Makefile,v 1.1842 2025/02/06 07:01:57 wiz Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -1160,8 +1160,8 @@ SUBDIR+=	tipidee
 SUBDIR+=	trac
 SUBDIR+=	tscrape
 SUBDIR+=	tuir
-SUBDIR+=	typo3_62
 SUBDIR+=	typo3-13
+SUBDIR+=	typo3_62
 SUBDIR+=	ufdbguard
 SUBDIR+=	uhttpmock
 SUBDIR+=	unit
