--- a/misc/stellarium/Makefile
+++ b/misc/stellarium/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.168 2024/12/27 18:19:27 adam Exp $
+# $NetBSD: Makefile,v 1.169 2025/02/06 08:48:59 adam Exp $
 
 DISTNAME=	stellarium-24.4
+PKGREVISION=	1
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=Stellarium/}
 GITHUB_RELEASE=	v${PKGVERSION_NOREV}
