--- a/textproc/py-json-logger/Makefile
+++ b/textproc/py-json-logger/Makefile
@@ -1,21 +1,24 @@
-# $NetBSD: Makefile,v 1.1 2023/05/05 09:45:01 adam Exp $
+# $NetBSD: Makefile,v 1.2 2025/02/06 09:48:37 adam Exp $
 
-DISTNAME=	python-json-logger-2.0.7
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/python-//}
+DISTNAME=	python_json_logger-3.2.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/python_//:S/_/-/}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/python-json-logger/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://github.com/madzak/python-json-logger
+HOMEPAGE=	https://github.com/nhairs/python-json-logger
 COMMENT=	Python library adding a JSON log formatter
 LICENSE=	modified-bsd
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+TEST_DEPENDS+=	${PYPKGPREFIX}-freezegun-[0-9]*:../../devel/py-freezegun
+
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+.include "../../lang/python/pyversion.mk"
+.if ${PYTHON_VERSION} < 310
+DEPENDS+=	${PYPKGPREFIX}-typing-extensions>0:../../devel/py-typing-extensions
+.endif
 
-do-test:
-	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} ${PYTHONBIN} -m unittest discover -v
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
