--- a/www/py-notebook/Makefile
+++ b/www/py-notebook/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.37 2024/10/14 06:46:08 wiz Exp $
+# $NetBSD: Makefile,v 1.38 2025/02/06 13:26:39 adam Exp $
 
-DISTNAME=	notebook-7.2.2
+DISTNAME=	notebook-7.3.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=n/notebook/}
@@ -11,8 +11,7 @@ COMMENT=	Web-based notebook environment for interactive computing
 LICENSE=	modified-bsd
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling>=1.11:../../devel/py-hatchling
-TOOL_DEPENDS+=	${PYPKGPREFIX}-hatch-jupyter-builder>=0.5:../../devel/py-hatch-jupyter-builder
-DEPENDS+=	${PYPKGPREFIX}-jupyterlab>=4.2.0:../../www/py-jupyterlab
+DEPENDS+=	${PYPKGPREFIX}-jupyterlab>=4.3.4:../../www/py-jupyterlab
 DEPENDS+=	${PYPKGPREFIX}-jupyterlab-server>=2.27.1:../../www/py-jupyterlab-server
 DEPENDS+=	${PYPKGPREFIX}-jupyter_server>=2.4.0:../../www/py-jupyter_server
 DEPENDS+=	${PYPKGPREFIX}-notebook_shim>=0.2:../../www/py-notebook_shim
