--- a/lang/rust/Makefile
+++ b/lang/rust/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.322 2025/02/02 13:34:47 he Exp $
+# $NetBSD: Makefile,v 1.323 2025/02/06 13:34:44 riastradh Exp $
 
 DISTNAME=	rustc-1.82.0-src
 PKGNAME=	${DISTNAME:S/rustc/rust/:S/-src//}
@@ -32,13 +32,13 @@ USE_TOOLS+=		bash grep gmake perl:build pkg-config
 BROKEN_ON_PLATFORM+=	NetBSD-[1-8].*-*
 
 HAS_CONFIGURE=		yes
-PYTHON_FOR_BUILD_ONLY=	yes
-CONFIG_SHELL=		${PYTHONBIN}
+PYTHON_FOR_BUILD_ONLY=	tool
+CONFIG_SHELL=		${TOOL_PYTHONBIN}
 CONFIGURE_SCRIPT=	src/bootstrap/configure.py
 CONFIGURE_ARGS+=	--prefix=${PREFIX}
 CONFIGURE_ARGS+=	--mandir=${PREFIX}/${PKGMANDIR}
 CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFDIR}
-CONFIGURE_ARGS+=	--python=${PYTHONBIN}
+CONFIGURE_ARGS+=	--python=${TOOL_PYTHONBIN}
 CONFIGURE_ARGS+=	--release-channel=stable
 CONFIGURE_ARGS+=	--local-rust-root=${RUST_BOOTSTRAP_PATH}
 CONFIGURE_ARGS+=	--enable-extended	# Build and install cargo too.
@@ -528,12 +528,12 @@ do-build:
 	${SETENV} ${MAKE_ENV}						\
 	sh -c "if [ \"${BUILD_TARGET}\" = \"dist\" ]; then		\
 		unset DESTDIR;						\
-		${PYTHONBIN} ./x.py					\
+		${TOOL_PYTHONBIN} ./x.py				\
 		    ${BUILD_TARGET} -j ${_MAKE_JOBS_N};			\
 	else								\
-		${PYTHONBIN} ./x.py					\
+		${TOOL_PYTHONBIN} ./x.py				\
 		    ${BUILD_TARGET} --stage 2 -j ${_MAKE_JOBS_N} &&	\
-		${PYTHONBIN} ./x.py					\
+		${TOOL_PYTHONBIN} ./x.py				\
 		    doc --stage 2 -j ${_MAKE_JOBS_N};			\
 	fi"
 
@@ -541,13 +541,13 @@ do-test:
 	${RUN}${_ULIMIT_CMD}						\
 	cd ${WRKSRC} &&							\
 	${SETENV} ${MAKE_ENV}						\
-		${PYTHONBIN} ./x.py test -j ${_MAKE_JOBS_N}
+		${TOOL_PYTHONBIN} ./x.py test -j ${_MAKE_JOBS_N}
 
 do-install:
 	${RUN}${_ULIMIT_CMD}						\
 	cd ${WRKSRC} &&							\
 	${SETENV} ${MAKE_ENV} ${INSTALL_ENV} 				\
-		${PYTHONBIN} ./x.py install -j ${_MAKE_JOBS_N}
+		${TOOL_PYTHONBIN} ./x.py install -j ${_MAKE_JOBS_N}
 
 SUBST_CLASSES+=		destdir
 SUBST_STAGE.destdir=	post-install
@@ -682,8 +682,8 @@ TOOL_DEPENDS+=	compat80>=0:../../emulators/compat80
 DEPENDS+=	libatomic-links>=0:../../devel/libatomic-links
 .endif
 
-TOOL_DEPENDS+= cmake-[0-9]*:../../devel/cmake
-.include "../../devel/cmake/buildlink3.mk"
+TOOL_DEPENDS+=	cmake-[0-9]*:../../devel/cmake
+
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../lang/python/tool.mk"
 .include "../../mk/bsd.pkg.mk"
