--- a/www/py-scgi/Makefile
+++ b/www/py-scgi/Makefile
@@ -1,21 +1,16 @@
-# $NetBSD: Makefile,v 1.20 2022/01/10 22:46:42 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2025/02/06 13:49:19 adam Exp $
 
-DISTNAME=	scgi-1.15
+DISTNAME=	scgi-2.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	www python
-MASTER_SITES=	http://python.ca/scgi/releases/
+MASTER_SITES=	${MASTER_SITE_PYPI:=s/scgi/}
 
 MAINTAINER=	manu@NetBSD.org
 HOMEPAGE=	https://python.ca/scgi/
 COMMENT=	Simple Common Gateway Interface
 LICENSE=	cnri-license
 
-DEPENDS+=	${PYPKGPREFIX}-quixote-[0-9]*:../../devel/py-quixote
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
-PYTHON_VERSIONS_ACCEPTED=	27 # py-quixote
-
-CFLAGS.SunOS+=	-D_XOPEN_SOURCE -D_XOPEN_SOURCE_EXTENDED=1
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
