--- a/textproc/dbcat/Makefile
+++ b/textproc/dbcat/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2023/01/28 13:08:41 pin Exp $
+# $NetBSD: Makefile,v 1.4 2025/02/06 14:23:37 wiz Exp $
 
 DISTNAME=	dbcat-0.1.5
 CATEGORIES=	textproc
@@ -11,11 +11,5 @@ COMMENT=	Equivalent of cat(1) for viewing sqlite database
 LICENSE=	mit
 
 .include "cargo-depends.mk"
-
-INSTALLATION_DIRS=	bin
-
-do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/target/release/dbcat ${DESTDIR}${PREFIX}/bin
-
 .include "../../lang/rust/cargo.mk"
 .include "../../mk/bsd.pkg.mk"
