--- a/finance/py-bitcoinlib/Makefile
+++ b/finance/py-bitcoinlib/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2022/01/04 20:53:52 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/02/06 16:27:44 adam Exp $
 
-DISTNAME=	python-bitcoinlib-0.11.0
+DISTNAME=	python-bitcoinlib-0.12.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^python-//}
-PKGREVISION=	1
 CATEGORIES=	finance net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/python-bitcoinlib/}
 
@@ -11,7 +10,9 @@ HOMEPAGE=	https://github.com/petertodd/python-bitcoinlib
 COMMENT=	Python bitcoin library
 LICENSE=	gnu-lgpl-v3
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+
 USE_LANGUAGES=	# none
 
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
