--- a/devel/py-hexbytes/Makefile
+++ b/devel/py-hexbytes/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2024/11/11 07:28:10 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2025/02/06 17:05:17 adam Exp $
 
-DISTNAME=	hexbytes-1.2.1
+DISTNAME=	hexbytes-1.3.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=h/hexbytes/}
@@ -16,8 +16,6 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis>=3.44.24:../../devel/py-hypothesis
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-xdist>=2.4.0:../../devel/py-test-xdist
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
