--- a/devel/py-editorconfig-core/Makefile
+++ b/devel/py-editorconfig-core/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2024/11/11 07:28:07 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2025/02/06 17:09:15 adam Exp $
 
-DISTNAME=	EditorConfig-0.12.4
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/EditorConfig/editorconfig-core/}
+DISTNAME=	editorconfig-0.17.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/-/-core-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=E/EditorConfig/}
 
@@ -10,11 +10,11 @@ HOMEPAGE=	https://editorconfig.org/
 COMMENT=	Editorconfig python library
 LICENSE=	python-software-foundation AND modified-bsd
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=42.2:../../devel/py-setuptools
+WHEEL_NAME=	${DISTNAME:S/editorc/EditorC/}
+
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61.2:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
