--- a/chat/py-nbxmpp/Makefile
+++ b/chat/py-nbxmpp/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2025/02/06 20:45:37 gdt Exp $
+# $NetBSD: Makefile,v 1.12 2025/02/06 21:46:15 wiz Exp $
 
 DISTNAME=	nbxmpp-4.4.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	chat python
 MASTER_SITES=	${MASTER_SITE_PYPI:=n/nbxmpp/}
 
@@ -10,7 +11,7 @@ HOMEPAGE=	https://dev.gajim.org/gajim/python-nbxmpp
 COMMENT=	Asynchronous Python library for XMPP
 LICENSE=	gnu-gpl-v3
 
-DEPENDS+=	libsoup-[0-9]*:../../net/libsoup
+DEPENDS+=	libsoup3-[0-9]*:../../net/libsoup3
 DEPENDS+=	${PYPKGPREFIX}-idna-[0-9]*:../../www/py-idna
 DEPENDS+=	${PYPKGPREFIX}-gobject3-[0-9]*:../../devel/py-gobject3
 DEPENDS+=	${PYPKGPREFIX}-precis-i18n>=1.0.0:../../textproc/py-precis-i18n
