--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.660 2025/02/05 22:25:37 markd Exp $
+# $NetBSD: Makefile,v 1.661 2025/02/07 03:16:13 ryoon Exp $
 #
 
 COMMENT=	Miscellaneous utilities
@@ -384,6 +384,7 @@ SUBDIR+=	s6-portable-utils
 SUBDIR+=	sch
 SUBDIR+=	sci
 SUBDIR+=	screen
+SUBDIR+=	screen4
 SUBDIR+=	sd-mux-ctrl
 SUBDIR+=	send-pr
 SUBDIR+=	siag
