--- a/lang/py-lsp-server/Makefile
+++ b/lang/py-lsp-server/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.21 2024/11/11 07:28:37 wiz Exp $
+# $NetBSD: Makefile,v 1.22 2025/02/07 07:04:24 adam Exp $
 
-DISTNAME=	python_lsp_server-1.12.0
+DISTNAME=	python_lsp_server-1.12.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/python_//:S/_/-/}
 CATEGORIES=	lang python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/python-lsp-server/}
