--- a/devel/py-ruff/Makefile
+++ b/devel/py-ruff/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.54 2025/01/31 18:40:20 wiz Exp $
+# $NetBSD: Makefile,v 1.55 2025/02/07 07:13:09 adam Exp $
 
-DISTNAME=	ruff-0.9.4
+DISTNAME=	ruff-0.9.5
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=r/ruff/}
