--- a/www/lua-resty-core/Makefile
+++ b/www/lua-resty-core/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2024/11/26 19:49:27 osa Exp $
+# $NetBSD: Makefile,v 1.8 2025/02/07 08:59:30 adam Exp $
 
-DISTNAME=	lua-resty-core-0.1.30
+DISTNAME=	lua-resty-core-0.1.31
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_GITHUB:=openresty/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
